gitops/observability/rendered/dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: observability
    app.kubernetes.io/part-of: hpdc-platform
  name: observability
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: hpdc-platform
  name: grafana
  namespace: observability
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: grafana
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: hpdc-platform
  name: hubble-ui
  namespace: observability
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: hubble-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: hpdc-platform
  name: grafana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ui
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ui
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: hpdc-platform
    spec:
      containers:
      - image: docker.io/grafana/grafana:12.2.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 20
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: hpdc-platform
  name: hubble-ui
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ui
      app.kubernetes.io/name: hubble-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ui
        app.kubernetes.io/name: hubble-ui
        app.kubernetes.io/part-of: hpdc-platform
    spec:
      containers:
      - image: docker.io/cilium/hubble-ui:0.16.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 20
          periodSeconds: 20
        name: hubble-ui
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.envoyproxy.io/casbin-enforced: "false"
    gateway.envoyproxy.io/native-auth: "true"
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: hpdc-edge-grafana-hubble-host-routes
    app.kubernetes.io/part-of: hpdc-platform
  name: hpdc-edge-grafana-hubble-host-routes
  namespace: envoy-gateway-system
spec:
  hostnames:
  - grafana.hpdc.local
  parentRefs:
  - name: hpdc-edge
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - backendRefs:
    - kind: Service
      name: grafana
      namespace: observability
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.envoyproxy.io/casbin-enforced: "false"
    gateway.envoyproxy.io/native-auth: "true"
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: hpdc-edge-hubble-host-route
    app.kubernetes.io/part-of: hpdc-platform
  name: hpdc-edge-hubble-host-route
  namespace: envoy-gateway-system
spec:
  hostnames:
  - hubble.hpdc.local
  parentRefs:
  - name: hpdc-edge
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - backendRefs:
    - kind: Service
      name: hubble-ui
      namespace: observability
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.envoyproxy.io/casbin-enforced: "false"
    gateway.envoyproxy.io/native-auth: "true"
  labels:
    app.kubernetes.io/name: hpdc-edge-observability-ui-routes
    app.kubernetes.io/part-of: hpdc-platform
  name: hpdc-edge-observability-ui-routes
  namespace: envoy-gateway-system
spec:
  hostnames:
  - '*.hpdc.local'
  parentRefs:
  - name: hpdc-edge
    sectionName: https
  rules:
  - backendRefs:
    - kind: Service
      name: hubble-ui
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /hubble
